- Fixed fixed #003244 fix.
- Applied #0003422 help.conf patches by Bock
- Applied #0002999 patch by Bock, fixing a fd leak.
- Applied #0003144 patch by Bock, fixing win32 install and such
- Applied #0003392 patch by Bock, adding some stuff to help.conf
- Entering 3.2.7 RC2 phase
- Fix, fix #0003421 patch
- Fixed wolfsage eff-up in c-ares.tar.gz, not running make distclean
- Updated /info
- Updated release notes
*** 3.2.7 release ***
- Fix aquanight's email
- #0003351 reported by Mareo regarding m_addmotd.so and m_svslusers.so 
  not being created
- Fixed bug in SJOIN, possibly causing things like odd bans showing up in
  some circumstances. Reported by Hurga, patch provided by fbi.
- Now allowing '1.2.3.4' ips again in IPv6 mode as well (instead of enforcing
  '::ffff:1.2.3.4' ips in the conf, they are now auto-converted to that).
  Based on patch from tabrisnet.
- Fixed issue where the cgiirc block did not work with IPv6, reported by
  djGrrr, fixed by previous change.
- Fixed CHROOTDIR, which was broken in 3.2.7: IRC_USER/IRC_GROUP did not work
  properly when CHROOTDIR was in use (#0003454).
- Fixed oper block bug where ip masks in oper::from::userhost did not always
  work succesfully (ex: 192.168.* worked, but 192.168.*.* didn't). Issue was
  introduced in 3.2.7, reported by tabrisnet (#0003494).
- CGI:IRC + IPv6: Fixed cgiirc block hostname never matching ipv4 cgiirc
  gateway properly (..again..), this was previously reported by pv2b.
- CGI:IRC + IPv6: Fixed issue where all cgiirc ipv4 clients were rejected with
  the message 'Invalid IP address', reported by stskeeps (#0003311), nate
  (#0003533) and others.
- Document CHROOTDIR in unreal32docs, reported by Beastie (#0002446).
- Fixed Mac OS X issue where "access denied" errors were encountered when 
  trying to read unrealircd.conf. All due to strange chmod() behavior. We now no
  longer try to set permissions on Mac OS X. Patch provided by Tibby (#3489).